--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   min-height: 100vh;
 
 }
+.app__title{
+    display: flex;
+    justify-content: center;
+    padding: 0.5em;
+    color: black;
+}
 .app__form{
     display: flex;
     justify-content: center;
@@ -15,10 +21,10 @@
 }
 .app__btn{
     border: none;
-    width: 7em;
+    width: 8em;
     background-color: greenyellow;
     padding: 1em;
-    border-radius: 1em 1em ;
+    border-radius: 8em ;
     color: black;
     font-weight: 700;
 }
@@ -27,4 +33,6 @@
     flex-wrap: wrap;
     gap: 2em;
     justify-content: center;
+    border-radius: 8em;
+    
 }
