--- a/src/components/styles/CardResidents.css
+++ b/src/components/styles/CardResidents.css
@@ -1,4 +1,4 @@
-.residennt{
+.resident{
     width: 100%;
     max-width: 14em;
     border-radius: 2em;
@@ -8,11 +8,11 @@
     color: white;
     transition: transform 150ms ease, box-shadow 1500ms ease;
 }
-.residennt:hover{
+.resident:hover{
     transform: scale(1.50);
     box-shadow: 0 0 1.5em black;
 }
-.residennt__status{
+.resident__status{
     position: absolute;
     top: 10%;
     background-color:  #084851;
@@ -23,34 +23,35 @@
     padding: 1em 1em;
     border-radius: 0 0.6em;
 }
-.residenr__satus-circle{
+.resident__status-circle{
     width: 0.8em;
-    aspect-ratio: 1;
     background-color: #777;
     border-radius: 50px;
-}
+
 .Dead{
 background-color: red;
 }
 .Alive{
     background-color: green;
 }
-.residennt__status-value{
+}
+.resident__status-value{
     font-size: 0.9em;
     font-weight: 300;
 }
-.residennt__body{
+.resident__body{
     padding: 1em 1em 2em;
 }
 .resident__name{
     text-align: center;
+    color: black;
 }
 .resident__separator{
  margin-top: 1em;
  margin-bottom: 1em;
  border-color: #777;
 }
-.residennt__state{
+.resident__state{
     display: grid;
     gap: 0.6em;
 
