--- a/src/components/styles/CardResidents.css
+++ b/src/components/styles/CardResidents.css
@@ -27,14 +27,14 @@
     width: 0.8em;
     background-color: #777;
     border-radius: 50px;
-
+}
 .Dead{
 background-color: red;
 }
 .Alive{
     background-color: green;
 }
-}
+
 .resident__status-value{
     font-size: 0.9em;
     font-weight: 300;
@@ -47,6 +47,8 @@ background-color: red;
     color: black;
 }
 .resident__separator{
+ background-color: #777;   
+ height: 0.4em;   
  margin-top: 1em;
  margin-bottom: 1em;
  border-color: #777;
@@ -55,5 +57,8 @@ background-color: red;
     display: grid;
     gap: 0.6em;
 
+}
+.resident-state-leves{
+    color:yellowgreen;
 }
 
